--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+  }
+
 .heading{
     background-color: black;
     color: aliceblue;
@@ -12,6 +25,8 @@
 
 .iphone11pro{
     background-image: url("/img/iphone11pro.jpg");
+    background-size: cover;
+    background-position: center center;
     padding: 1em;
     text-align: center;
     color: aliceblue;
@@ -20,16 +35,22 @@
 
 .iphone11{
     background-image: url("/img/iphone11.jpg");
+    background-size: cover;
+    background-position: center center;
     padding: 1em;
     text-align: center;
-    color: aliceblue;
+    color: rgb(1, 7, 12);
     height: 45em;
 
 }
 
 .watch{
+    background-image: url("/img/applewatch.jpg");
+    background-size: cover;
+    background-position: center center;
     padding: 1em;
     text-align: center;
-
+    color: rgb(1, 7, 12);
+    height: 45em;
 }
 
