--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,31 @@
 h1 {
     display: block;
     font-size: 2em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 0.67em 0 0 0;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
-  }
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    padding: 0.25em 0 0 0;
+    font-weight: normal;
+    font-family: 'Roboto', sans-serif;
+}
+
+p{
+    padding: 0.35em 0 0 0;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+.bodylinks{
+    color: rgb(36, 104, 182);
+}
 
 .heading{
     background-color: black;
@@ -23,14 +41,41 @@ h1 {
     text-align: center;
 }
 
+.grey-line{
+    color: rgb(118, 123, 128);
+}
+
+.borderline{
+    border-bottom: 0.01em solid rgb(100, 100, 100);  
+}
+
+.navborder{
+    font-size: 1em;
+    padding: 0.35em 0.35em 1em 0.35em;
+    text-decoration: none;
+    color: rgb(243, 245, 247);
+}
+
+.searchbox{
+    width: 100%;
+    padding: 0.50em 0.50em;
+    border-radius: 2px;
+    border: 0px solid;
+    background-color: rgb(100, 100, 100);
+    background-image: url('/img/search.svg');
+    background-repeat: no-repeat;
+    background-position: 0.50em;
+    color: #fff;
+    padding-left: 25px;
+}
+
 .iphone11pro{
     background-image: url("/img/iphone11pro.jpg");
     background-size: cover;
     background-position: center center;
-    padding: 1em;
     text-align: center;
     color: aliceblue;
-    height: 45em;
+    height: 30em;
 }
 
 .iphone11{
@@ -40,8 +85,7 @@ h1 {
     padding: 1em;
     text-align: center;
     color: rgb(1, 7, 12);
-    height: 45em;
-
+    height: 30em;
 }
 
 .watch{
@@ -51,6 +95,8 @@ h1 {
     padding: 1em;
     text-align: center;
     color: rgb(1, 7, 12);
-    height: 45em;
+    height: 30em;
 }
+
+
 
