--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     max-width: 100%;
 } */
 
+/* Block elements can sel-center using margin left/right auto (margin: 0 auto; */
+
+/* Inline element must be centered by their parent using text-align */
+
 .container{
     max-width: 30rem;
     margin: 0 auto;
@@ -50,6 +54,16 @@ a{
     border: 1em;
 }
 
+.toggle-button{
+    /* height: 2vh; */
+    background-color: black;
+    width: 1em;
+    color: white;
+    /* padding: 0 0 0 0.1em; */
+    font-size: 1.7em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .logo{
     text-align: center;
     /* padding-left: 5em; */
@@ -74,16 +88,6 @@ a{
     color: rgb(243, 245, 247);
 }
 
-.toggle-button{
-    /* height: 2vh; */
-    background-color: black;
-    width: 1em;
-    color: white;
-    /* padding: 0 0 0 0.1em; */
-    font-size: 1.7em;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .searchbox{
     width: 100%;
     padding: 0.50em 0.50em;
@@ -96,6 +100,7 @@ a{
     color: #fff;
     padding-left: 1.875em;
 }
+
 .searchbox::placeholder {
     color: white;
 }
